[gd_scene load_steps=8 format=3 uid="uid://by15y6dq36asb"]

[ext_resource type="Script" path="res://friends/drone_2/drone_2.gd" id="1_sa868"]
[ext_resource type="Texture2D" uid="uid://byu274av1sn63" path="res://friends/drone/npc_6.png" id="2_hj2fw"]
[ext_resource type="AudioStream" uid="uid://bxlm6rlyruvcl" path="res://weapons/shotgun/shotgun.mp3" id="3_50lhe"]
[ext_resource type="AudioStream" uid="uid://c0onmt34tyfn7" path="res://weapons/shotgun/shotgun_reload.mp3" id="4_6nai7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rn6sd"]
radius = 78.0064

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_74rty"]
bg_color = Color(0.0235294, 0.113725, 0.329412, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_846r8"]
bg_color = Color(0.8, 0.224, 0.16, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Drone" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_sa868")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -71)
scale = Vector2(0.65, 0.65)
texture = ExtResource("2_hj2fw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -72)
shape = SubResource("CircleShape2D_rn6sd")

[node name="ShootPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-4, -89)

[node name="sfx_shoot" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_50lhe")
volume_db = 10.306

[node name="sfx_reload" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_6nai7")

[node name="HealthProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
z_index = 200
offset_left = -117.0
offset_top = -186.0
offset_right = 116.0
offset_bottom = -174.0
theme_override_styles/background = SubResource("StyleBoxFlat_74rty")
theme_override_styles/fill = SubResource("StyleBoxFlat_846r8")
value = 100.0
show_percentage = false

[node name="HealthText" type="Label" parent="HealthProgressBar"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
